Fix spacing

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -111,14 +111,21 @@ nav h1, nav h2 {
 #bio {
   color: #777;
   margin-top: 10px;
-  margin-bottom: 15px;
-  padding-top: 15px;
-  //border: dotted #ddd;
+  margin-bottom: 10px;
+  //border-top: dotted #ddd;
   //border-width: 1px 0;
+  border: dotted #ddd;
+  border-width: 1px 0;
+}
+
+#bio p {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #social {
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 12px;
   font-size: 13px;
 }
 
@@ -126,9 +133,9 @@ nav h1, nav h2 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 13px;
-  padding-top: 15px;
-  //border-top: dotted #ddd;
-  //border-width: 1px 0;
+  padding-top: 10px;
+  border-top: dotted #ddd;
+  border-width: 1px 0;
 }
 
 #post pre {    
@@ -215,7 +222,7 @@ nav h1, nav h2 {
 }
 
 #stalker a {
-  width: 29px;
+  //width: 32px;
   overflow: hidden;
   float: left;
 }
